# 2026_team22

./: .env.example  .gitignore  .prettierignore  AI_CONTEXT.md  ARCHITECTURE_fin.md  README.md  Taskfile.yml  app.config.js  app.json  docker-compose.yml  eas.json  eslint.config.mjs  flowchart.md  metro.config.js  package.json  pnpm-lock.yaml  promot.txt  system-architecture.md  tsconfig.json  withBackgroundActions.js
backend/: Dockerfile  IMPLEMENT_README.md  alembic.ini  pyproject.toml  test_output.txt  test_output2.txt  test_output3.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users_and_sleep_plan_cache.py  002_add_sleep_settings_and_sleep_logs.py  003_sleep_logs_unique_user_date.py  004_sleep_logs_usage_minutes.py
backend/app/: config.py  database.py  main.py
backend/app/application/: __init__.py  base.py
backend/app/application/plan/: __init__.py  get_or_create_plan.py  ports.py
backend/app/application/settings/: __init__.py  get_settings.py  put_settings.py
backend/app/application/sleep_log/: __init__.py  create_sleep_log.py  get_sleep_logs.py  update_mood.py
backend/app/application/user/: __init__.py  create_user.py  delete_user.py  get_user.py  (+1 more)
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/presentation/: __init__.py
backend/app/services/: __init__.py  llm.py
backend/scripts/: seed_dev_data.py
backend/tests/: conftest.py  test_plan_api.py  test_plan_cache_repository.py  test_plan_usecase.py  test_settings_api.py  test_signature.py  test_sleep_logs_api.py  test_users_crud.py
(+161 files in other folders)
