# pyproject.toml - Pythonのプロジェクト設定（pipの代わりにuvを使用）
# 依存ライブラリ（FastAPI, SQLAlchemy等）とバージョンを定義
# uv sync で依存をインストール

[project]
name = "sleepsupport-backend"
version = "0.1.0"
description = "SleepSupportApp バックエンドAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.0",
    "supabase>=2.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.26",
    "email-validator>=2.1.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/versions", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",
    "B008",   # FastAPI Depends() のデフォルト引数は慣用
    "B028",   # warnings.warn stacklevel（テストでは許容）
    "N815",   # Pydantic スキーマの API 契約で camelCase を使用
    "B904",   # raise from（段階的に修正予定）
    "B010",   # setattr 定数（既存コード）
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic/versions", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

